--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,28 +1,22 @@
-version: '3.8'
-
 services:
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    image: lph-backend:latest
     container_name: lph-backend
     ports:
       - "3888:3888"
     environment:
       - PORT=3888
-      - GEMINI_API_KEY=${GEMINI_API_KEY:-}
       - CORS_ORIGIN=http://localhost:3777
       - NODE_ENV=production
       - DATABASE_PATH=/app/data
     volumes:
       # 挂载数据库文件目录
       - ./backend/data:/app/data
-      # 如果需要访问宿主机系统信息，可以挂载相关目录
-      # 注意：在生产环境中应该使用更安全的挂载方式
+      # 挂载系统文件以获取系统信息（只读）
       - /etc/os-release:/etc/os-release:ro
       - /proc:/proc:ro
     restart: unless-stopped
-    # 使用特权模式以便访问系统命令（可选）
+    # 使用特权模式以便访问系统命令
     privileged: true
     # 禁用 AppArmor 以避免 profile 冲突
     security_opt:
@@ -32,9 +26,7 @@ services:
       - lph-network
 
   frontend:
-    build:
-      context: .
-      dockerfile: Dockerfile.frontend
+    image: lph-frontend:latest
     container_name: lph-frontend
     ports:
       - "3777:80"
