--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -12,8 +12,18 @@ RUN npm ci
 # 复制源代码
 COPY . .
 
+# 构建前端（环境变量在构建时替换）
+# 注意：Vite 的环境变量需要在构建时可用
+# 使用相对路径或运行时检测，因为浏览器需要访问实际的主机地址
+# 默认值会在运行时根据浏览器位置自动调整
+ARG VITE_API_URL=
+ENV VITE_API_URL=$VITE_API_URL
+
 # 构建前端
 RUN npm run build
+
+# 验证构建输出
+RUN ls -la /app/dist && ls -la /app/dist/index.html || (echo "Build failed - no index.html found" && exit 1)
 
 # 生产阶段 - 使用 Nginx 提供静态文件服务
 FROM nginx:alpine
@@ -21,8 +31,8 @@ FROM nginx:alpine
 # 复制构建产物到 nginx
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# 复制 nginx 配置（如果需要自定义）
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
+# 复制 nginx 配置
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
